# postm

./: .env-example  .gitignore  README.md  package.json  pyproject.toml  scripts.py  tsconfig.json
postm/: app.py  database.py
postm/controllers/: posts.py  users.py
postm/entities/: post.py  user.py
postm/middlewares/: authentication.py
postm/repositories/: posts.py  repository.py  users.py
postm/routes/: api.py  posts.py  users.py
postm/services/: posts.py  users.py
prisma/: schema.prisma
prisma/migrations/20240625174859_user/: migration.sql
prisma/migrations/20240628114726_post/: migration.sql
src/: app.ts  env.ts  index.ts
src/controllers/: posts.ts  users.ts
src/entities/: post.ts  user.ts
src/middlewares/: authentication.ts  upload.ts
src/repositories/: posts.ts  users.ts
src/routes/: api.ts  posts.ts  users.ts
src/services/: posts.ts  users.ts
tests/: test_postsService.py  test_usersService.py
