[tool.poetry]
name = "postm"
version = "1.0.0"
description = "Postm é a implementação do projeto final do processo seletivo da Loading."
authors = ["pab-h <dev.pab.2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pymongo = "^4.7.2"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"

[tool.poetry.scripts]
start = 'scripts:start'
test = 'scripts:test'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
